--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -17,5 +17,11 @@
     <color name="colorBrightGreen">#9CFF2E</color>
     <color name="colorGreen">#38E54D</color>
     <color name="colorBrightBlue">#429AE0</color>
+
+    <color name="colorGray">#979797</color>
+    <color name="colorLightGray">#F1F1F1</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color"
+        tools:override="true">@color/colorLightGray</color>
 
 </resources>
