--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,4 +44,16 @@
         <item name="android:fontFamily">@font/rubik_regular</item>
     </style>
 
+    <style name="CreatePageTextInputLayout" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundColor">@color/colorLightGray</item>
+        <item name="android:textColorHint">@color/colorGray</item>
+        <item name="boxStrokeColor">@color/colorLightGray</item>
+        <item name="hintTextColor">@color/black</item>
+
+        <item name="boxCornerRadiusBottomEnd">10dp</item>
+        <item name="boxCornerRadiusBottomStart">10dp</item>
+        <item name="boxCornerRadiusTopEnd">10dp</item>
+        <item name="boxCornerRadiusTopStart">10dp</item>
+    </style>
+
 </resources>
