--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/colorPrimary"
+        app:tabIconTint="@color/white"
         app:tabGravity="fill"
-        app:tabInlineLabel="true"/>
+        app:tabInlineLabel="true"
+        app:tabBackground="@drawable/tabs_color_selector"
+        app:tabIndicator="@null"
+        app:tabRippleColor="@null"/>
     
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
