--- a/app/src/main/res/layout/tab_layout_custom_view.xml
+++ b/app/src/main/res/layout/tab_layout_custom_view.xml
@@ -14,6 +14,7 @@
         android:id="@android:id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/TextViewTitleStyle"/>
+        style="@style/TextViewTitleStyle"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
