--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/todays_activities"
-            android:layout_marginHorizontal="20dp"/>
+            android:layout_marginHorizontal="40dp"
+            tools:listitem="@layout/item_activities"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
