--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,10 +38,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_todays_activities"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/todays_activities"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="40dp"
-            tools:listitem="@layout/item_activities"/>
+            tools:listitem="@layout/item_plan"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
