--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -36,6 +36,7 @@
             style="@style/TextViewSubtitleStyle"/>
 
         <TextView
+            android:id="@+id/activity_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
