--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,22 +7,22 @@
     tools:context=".ui.view.profile.ProfileActivity"
     android:background="@color/colorBrightBlue">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/avatar_url"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@drawable/ic___0__artboard_32" />
 
     <TextView
         android:id="@+id/tv_profile_name"
         style="@style/ButtonTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/card_task"
@@ -49,15 +49,40 @@
             android:layout_height="match_parent"
             android:padding="16dp">
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="250dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="16dp"
+                android:progressDrawable="@drawable/progress_bar_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_Exp"
+                style="@style/TextViewTitleStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="%d EXP" />
+
+
             <TextView
                 android:id="@+id/tv_statistic"
                 style="@style/TextViewTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/statistics"
+                android:layout_marginTop="16dp"
+                tools:text="@string/statistics"
                 android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
 
             <RelativeLayout
                 android:id="@+id/taskDone_container"
@@ -78,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="@string/finished_tasks"
+                    tools:text="@string/finished_tasks"
                     android:textColor="@color/white" />
 
 
@@ -90,7 +115,7 @@
                     android:layout_below="@id/tv_taskDone"
                     android:layout_marginTop="8dp"
                     android:gravity="center_vertical"
-                    android:text="@string/great_job"
+                    tools:text="@string/great_job"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -100,7 +125,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:gravity="center_vertical"
-                    android:text="@string/tv_taskDone_value"
+                    tools:text="@string/tv_taskDone_value"
                     android:textColor="@color/white"
                     tools:ignore="RelativeOverlap" />
 
@@ -125,7 +150,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="@string/ongoing_tasks"
+                    tools:text="@string/ongoing_tasks"
                     android:textColor="@color/white" />
 
 
@@ -137,7 +162,7 @@
                     android:layout_below="@id/tv_Ongoing"
                     android:layout_marginTop="8dp"
                     android:gravity="center_vertical"
-                    android:text="@string/dont_give_up"
+                    tools:text="@string/dont_give_up"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -147,7 +172,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:gravity="center_vertical"
-                    android:text="@string/tv_taskOngoin_value"
+                    tools:text="@string/tv_taskOngoin_value"
                     android:textColor="@color/white"
                     tools:ignore="RelativeOverlap" />
 
