--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -8,20 +8,20 @@
     android:background="@color/colorSecondary">
 
     <ImageView
-        tools:src="@tools:sample/avatars"
-        android:id="@+id/CreatePagePet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/createPagePet"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:src="@drawable/bear2"/>
 
     <TextView
         android:id="@+id/planTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/CreatePagePet"
+        app:layout_constraintTop_toBottomOf="@id/createPagePet"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
@@ -35,7 +35,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/planTitle"
         android:layout_marginHorizontal="20dp"
-        style="@style/CreatePageTextInputLayout">
+        style="@style/CreatePageTextInputLayout"
+        app:hintEnabled="false">
         
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/planTitleEditText"
@@ -63,7 +64,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/planDescription"
         android:layout_marginHorizontal="20dp"
-        style="@style/CreatePageTextInputLayout">
+        style="@style/CreatePageTextInputLayout"
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/planDescEditText"
@@ -95,7 +97,8 @@
         style="@style/CreatePageTextInputLayout"
         app:endIconMode="custom"
         app:endIconDrawable="@drawable/ic_calendar"
-        app:endIconTint="@color/colorGray">
+        app:endIconTint="@color/colorGray"
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/planDateEdit"
@@ -126,7 +129,8 @@
         app:layout_constraintTop_toBottomOf="@id/planTime"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        style="@style/CreatePageTextInputLayout">
+        style="@style/CreatePageTextInputLayout"
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/planTimeHourEdit"
@@ -157,7 +161,8 @@
         app:layout_constraintTop_toBottomOf="@id/planTime"
         app:layout_constraintStart_toEndOf="@id/planTimeDivider"
         android:layout_marginStart="10dp"
-        style="@style/CreatePageTextInputLayout">
+        style="@style/CreatePageTextInputLayout"
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/planTimeMinuteEdit"
