--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -5,14 +5,28 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.view.dashboard.ActivitiesFragment"
-    android:background="@color/colorBrightBlue">
+    android:background="@drawable/sky_bg">
+
+    <TextView
+        android:id="@+id/fragment_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:text="@string/your_plans"
+        android:textColor="@color/white"
+        style="@style/TextViewAppTitleStyle"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activities_plan"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="40dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="70dp"
         tools:listitem="@layout/item_activities_plan"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
