--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -12,28 +12,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="#82CD47">
 
-        <TextView
-            android:id="@+id/skip_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="20dp"
-            android:text="@string/skip_button"
-            android:textSize="18sp"
-            android:textColor="#FFFFFF"
-            />
-
         <ImageView
             android:id="@+id/petImage"
-            tools:src="@tools:sample/avatars"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toBottomOf="@id/skip_button"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="60dp"
+            android:src="@drawable/bear"/>
 
         <TextView
             android:id="@+id/headline"
@@ -43,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:text="@string/title_welcome"
             android:textSize="42sp"
             android:textColor="#FFFFFF"/>
@@ -57,6 +44,7 @@
         android:background="@drawable/wave"/>
 
     <TextView
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/wave"
