--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,6 @@
     <color name="mtrl_textinput_default_box_stroke_color"
         tools:override="true">@color/colorLightGray</color>
 
+    <color name="colorInvisible">#00000000</color>
+
 </resources>
