--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,36 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.splash.SplashActivity"
-    android:background="@color/colorBrightBlue">
+    android:background="@color/colorBrightBlue"
+    tools:context=".ui.view.splash.SplashActivity">
 
     <ImageView
         android:id="@+id/appIcon"
-        tools:src="@tools:sample/avatars"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/ic_splash_logo"
         app:layout_constraintBottom_toTopOf="@id/mountains_forests"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/appTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/TextViewLoginTitleStyle"
         android:text="@string/app_name"
-        android:textSize="32sp"
-        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/mountains_forests"
-        app:layout_constraintTop_toBottomOf="@id/appIcon"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/appIcon" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mountains_forests"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ic_splash_screen_clip_art"/>
+        android:background="@drawable/ic_splash_screen_clip_art"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
