--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,11 +44,19 @@
         <item name="android:fontFamily">@font/rubik_regular</item>
     </style>
 
+    <style name="TextViewLoginTitleStyle">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/rubik_medium</item>
+    </style>
+
     <style name="CreatePageTextInputLayout" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxBackgroundColor">@color/colorLightGray</item>
         <item name="android:textColorHint">@color/colorGray</item>
         <item name="boxStrokeColor">@color/colorLightGray</item>
-        <item name="hintTextColor">@color/black</item>
+        <item name="hintTextColor">@color/colorInvisible</item>
 
         <item name="boxCornerRadiusBottomEnd">10dp</item>
         <item name="boxCornerRadiusBottomStart">10dp</item>
